<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/white">

    <ImageView
        android:id="@+id/main_imageView"
        android:layout_width="207dp"
        android:layout_height="130dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/logo"
        app:srcCompat="@drawable/img" />

    <TextView
        android:id="@+id/main_welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="50dp"
        android:gravity="center_horizontal"
        android:text="@string/bienvenue_dans_hobbyshare"
        android:textColor="#4975F2"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.212"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.132" />

    <Button
        android:id="@+id/main_button"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#4975F2"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:text="@string/se_connecter"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

    <Button
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:id="@+id/main_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:background="#4975F2"
        android:padding="15dp"
        android:text="@string/s_inscrire"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

</LinearLayout>
