<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:id="@id/fragment_home"
    android:background="@color/white">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@id/home">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="148dp"
                android:layout_marginTop="10dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="72dp"
                    android:layout_height="75dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="10dp"
                    app:srcCompat="@drawable/img" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="110dp"
                    android:text="@string/bonjour_ines"
                    android:textColor="#4975F2"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <SearchView
                android:id="@id/home_search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:inputType="text"
                android:queryHint="@string/rechercher_un_groupe_un_ami">

            </SearchView>



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="212dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/notifications"
                        android:textColor="#4975F2"
                        android:textSize="24dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="40dp"
                        android:layout_marginVertical="5dp"
                        android:text="@string/marion_vous_a_envoy_une_invitation"
                        android:textColor="#090909"
                        android:textSize="20dp" />
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>