<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyProfileFragment"
    android:orientation="vertical"
    android:id="@id/my_profile_fragment"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/my_profile"
            android:layout_width="268dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center|left"
            android:text="@string/Mon_profil"
            android:textColor="#4975F2"
            android:textSize="42sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="107dp"
            android:layout_marginHorizontal="15dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/photo_myprofile"
                android:layout_width="181dp"
                android:src="@drawable/img"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/pseudo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/Ines"
                android:layout_marginRight="35dp"
                android:textColor="#070707"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/my_infos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#EDE9E9"
                android:ems="10"
                android:gravity="start|top"
                android:padding="10dp"
                android:shadowColor="#0C0C0C"
                android:text="@string/mes_informations_n_21ans_n_tudiante_n_ines_kessal_telecom_paris_fr"
                android:textColor="#0C0C0C"
                android:textSize="25sp"
                android:textStyle="" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/editButtonInfos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#FDFBFB"
                android:clickable="true"
                android:src="@drawable/baseline_edit_black_18"
                app:backgroundTint="#FBFBFB" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/my_friends"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#EDE9E9"
                android:ems="10"
                android:gravity="start|top"
                android:padding="10dp"
                android:text="@string/mes_amis_n_antoine_mathieu_aline"
                android:textColor="#0C0C0C"
                android:textSize="25sp"
                android:textStyle="" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/editButtonFriendList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#FDFBFB"
                android:clickable="true"
                android:src="@drawable/baseline_edit_black_18"
                app:backgroundTint="#FBFBFB" />

        </FrameLayout>

        <FrameLayout
            android:id="@id/monprofil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:padding="10dp">

            <TextView
                android:id="@+id/my_groups"
                android:layout_width="match_parent"
                android:layout_height="83dp"
                android:background="#EDE9E9"
                android:ems="10"
                android:gravity="start|top"
                android:padding="10dp"
                android:shadowColor="#0C0C0C"
                android:text="@string/mes_groupes_n_golf_tennis_foot_piano"
                android:textColor="#0C0C0C"
                android:textSize="25sp"
                android:textStyle="" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/editButtonGroupList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="#FDFBFB"
                android:clickable="true"
                android:src="@drawable/baseline_edit_black_18"
                app:backgroundTint="#FBFBFB" />

        </FrameLayout>

    </LinearLayout>


</FrameLayout>